--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "devDependencies": {
-    "autoprefixer": "^9.1.5",
-    "browser-sync": "^2.23.5",
+    "autoprefixer": "^9.7.2",
+    "browser-sync": "^2.26.7",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sass-glob": "^1.0.9",
+    "gulp-sass": "^3.2.1",
+    "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^1.12.1",
-    "gulp-uglify": "^3.0.0",
-    "pug": "^2.0.0-rc.4",
+    "gulp-uglify": "^3.0.2",
+    "pug": "^2.0.4",
     "pump": "^2.0.1"
   },
   "name": "army-shop.cz",
@@ -19,7 +19,7 @@
   "main": "index.html",
   "dependencies": {
     "natives": "^1.1.6",
-    "npm": "^6.2.0"
+    "npm": "^6.13.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
